k8s/haskell-servant-k8s-apply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haskell-servant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haskell-servant
  template:
    metadata:
      labels:
        app: haskell-servant
    spec:
      containers:
      - name: haskell-servant
        image: elmanhasa/haskell-servant:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: haskell-servant
  labels:
    app: haskell-servant-service
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  selector:
    app: haskell-servant
  type: LoadBalancer
