k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: servant-play-service
  name: servant-play-service
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: haskell-servant
  type: ClusterIP
status:
  loadBalancer: {}
