k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: servant-play
spec:
  backend:
    serviceName: servant-play-service
    servicePort: 80
